menu spacing fix

--- a/css/child-theme.css
+++ b/css/child-theme.css
@@ -15019,8 +15019,8 @@ body {
 }
 
 .navbar-expand-lg .navbar-nav .nav-link {
-  margin: 0 10px !important;
-  padding: 0.5rem 1rem !important;
+  margin: 2px !important;
+  padding: 0.5rem !important;
   font-family: "Quicksand", arial, sans-serif;
   font-weight: 500;
   font-size: 1rem;
@@ -15029,9 +15029,11 @@ body {
   border: 2px solid #fff;
   transition: 0.2s;
 }
-@media (min-width: 1200px) {
+@media (min-width: 1400px) {
   .navbar-expand-lg .navbar-nav .nav-link {
-    font-size: 1.25rem;
+    margin: 0 10px !important;
+    padding: 0.5rem 1rem !important;
+    font-size: 1.15rem;
   }
 }
 .navbar-expand-lg .navbar-nav .nav-link:hover {
