--- a/css/custom-editor-style.css
+++ b/css/custom-editor-style.css
@@ -12143,8 +12143,8 @@ body {
 }
 
 .navbar-expand-lg .navbar-nav .nav-link {
-  margin: 0 10px !important;
-  padding: 0.5rem 1rem !important;
+  margin: 2px !important;
+  padding: 0.5rem !important;
   font-family: "Quicksand", arial, sans-serif;
   font-weight: 500;
   font-size: 1rem;
@@ -12153,9 +12153,11 @@ body {
   border: 2px solid #fff;
   transition: 0.2s;
 }
-@media (min-width: 1200px) {
+@media (min-width: 1400px) {
   .navbar-expand-lg .navbar-nav .nav-link {
-    font-size: 1.25rem;
+    margin: 0 10px !important;
+    padding: 0.5rem 1rem !important;
+    font-size: 1.15rem;
   }
 }
 .navbar-expand-lg .navbar-nav .nav-link:hover {
