--- a/src/sass/theme/layouts/_header.scss
+++ b/src/sass/theme/layouts/_header.scss
@@ -18,8 +18,8 @@
 
 .navbar-expand-lg .navbar-nav {
 	.nav-link {
-		margin: 0 10px !important;
-		padding: 0.5rem 1rem !important;
+		margin: 2px !important;
+		padding: 0.5rem !important;
 		font-family: $headings-font-family;
 		font-weight: 500;
 		font-size: 1rem;
@@ -28,8 +28,10 @@
 		border: 2px solid #fff;
 		transition: .2s;
 
-		@include media-breakpoint-up(xl) {
-			font-size: 1.25rem;
+		@include media-breakpoint-up(xxl) {
+			margin: 0 10px !important;
+			padding: 0.5rem 1rem !important;
+			font-size: 1.15rem;
 		}
 
 		&:hover {
